# ECM-MD

./: Project Overview.md  README.md  Technical Implementation Guide.md  pyproject.toml  requirements.txt  setup-ecm-hanwha.ps1  setup.py
config/: tuned_params.json
datasets/raw/original/: Pohang_Eardo_1_Klein3900_900_050_20241011171100_001_04.xml
datasets/raw/simulation/: pohang_SDS_1_SDS_800_050_20250326105519_4.xml
scripts/: end_to_end.py
src/features/: combined_feature_extractor.py  gabor_extractor.py  hog_extractor.py  lbp_extractor.py
src/pipeline/: data_loader.py  models.py  pipeline.py  reporting.py  utils.py
src/process/: augmentation.py  cropping.py  labeling.py  splitting.py  terrain.py
