[build-system]
requires = ["setuptools>=77", "wheel"]   # 최신 경고 정책 반영
build-backend = "setuptools.build_meta"

[project]
name = "ecm-hanwha"
version = "0.1.0"
description = "ECM Hanwha project"
readme = { file = "README.md", content-type = "text/markdown" }  # README 경고 방지
requires-python = ">=3.10"
license = "MIT"   # ✅ 테이블 대신 SPDX 문자열 권장(경고 해결)
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [   # ✅ pyproject에 두면 무시 경고 사라짐
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]

# 핵심 런타임 의존성만 두고, 나머지는 requirements.txt로 관리 권장
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "torch>=2.2,<2.3",          # Python 3.10/3.11 기준 보수적 범위 예시
  "scikit-learn>=1.4,<1.6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

# (선택) uv를 쓰는 경우에만 의미 있음 — pip/setuptools는 이 섹션을 무시합니다.
[tool.uv]
requirements = ["requirements.txt"]
